src/objects/Som_KontaktberichtContact__c.object
<CustomObject>
    <fields>
        <fullName>Contact_TN__c</fullName>
        <description>TN ist Kontakt des Kontaktberichts</description>
        <formula>Som_Contact__c =
 Som_Kontaktbericht__r.Som_Contact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>TN ist Kontakt des Kontaktberichts</inlineHelpText>
        <label>Contact TN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inhaber_TN__c</fullName>
        <description>Ist Inhaber Teilnehmer</description>
        <formula>LEFT( P7S1_EmpId_KBOwner__c ,15) =
LEFT( P7S1_EmpId_TnContact__c, 15)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Ist Inhaber Teilnehmer</inlineHelpText>
        <label>Inhaber TN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P7S1_EmpId_KBOwner__c</fullName>
        <formula>Som_Kontaktbericht__r.Owner:User.P7S1_Emp__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mitarbeiter-Id Kontaktbericht-Inhaber</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_EmpId_TnContact__c</fullName>
        <formula>Som_Contact__r.P7S1_Emp__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mitarbeiter-Id Teilnehmer-Kontakt</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Som_AccountName__c</fullName>
        <formula>Som_Contact__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Som_ContactEmail__c</fullName>
        <formula>Som_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Kontakt E-Mail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Som_ContactPhone__c</fullName>
        <formula>Som_Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Kontakt Telefon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Som_Contact__c</fullName>
        <label>Kontakt</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Teilnehmer</relationshipLabel>
        <relationshipName>Teilnehmer</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Som_KontaktberichtTeilnehmerVon__c</fullName>
        <description>Gibt an, in welcher Funktion der Kontakt bei einem Kontaktbericht als Teilnehmer angelegt ist.</description>
        <formula>Som_Contact__r.Som_KontaktberichtTeilnehmerVon__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Gibt an, in welcher Funktion der Kontakt bei einem Kontaktbericht als Teilnehmer angelegt ist.</inlineHelpText>
        <label>Teilnehmer von</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Som_Kontaktbericht__c</fullName>
        <label>Kontaktbericht</label>
        <referenceTo>Som_Kontaktbericht__c</referenceTo>
        <relationshipLabel>Teilnehmer</relationshipLabel>
        <relationshipName>Teilnehmer</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Som_Unique__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>stellt sicher, dass Teilnehmer nicht mehrfach zugeordnet werden</description>
        <inlineHelpText>stellt sicher, dass Teilnehmer nicht mehrfach zugeordnet werden</inlineHelpText>
        <label>Som_Unique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Teilnehmer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Som_Kontaktbericht__c</columns>
        <columns>NAME</columns>
        <columns>Som_AccountName__c</columns>
        <columns>Som_Contact__c</columns>
        <columns>Som_ContactEmail__c</columns>
        <columns>Som_KontaktberichtTeilnehmerVon__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Alle</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Teilnehemr_aus_Konzern</fullName>
        <columns>Som_Kontaktbericht__c</columns>
        <columns>NAME</columns>
        <columns>Som_AccountName__c</columns>
        <columns>Som_Contact__c</columns>
        <columns>Som_ContactEmail__c</columns>
        <columns>Som_KontaktberichtTeilnehmerVon__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Som_KontaktberichtTeilnehmerVon__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Teilnehemr aus Konzern</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Teilnehmer-Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Teilnehmer</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>